[tool.poetry]
name = "politely-ui"
version = "0.1.0"
description = ""
authors = ["Eu-Bin KIM <tlrndk123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
streamlit = "^1.32.2"
pyyaml = "^6.0.1"
openai = "^1.16.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
politely = "4.0.0a1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
